<resources>
    <string name="app_name">Bantumi</string>

    <string name="txtPlayer1">Jugador 1</string>
    <string name="txtPlayer2">Jugador 2</string>
    <string name="txtBtnReset">Reset</string>

    <!-- Valores del juego -->
    <integer name="intNumInicialSemillas">4</integer>
    <string name="txtInitialScore">0</string>

    <!-- Mensaje opción sin implementar -->
    <string name="txtSinImplementar">¡No implementado aún!</string>

    <!-- Opciones -->
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutTitle">¿Cómo se juega?</string>
    <string name="aboutMessage"><p>Cada jugador elige una de sus 6 casillas -que no puede estar vacía-, recoge
        todas las semillas que contenga y las “siembra” una a una en sentido contrario a las agujas del reloj
        en las siguientes casillas del tablero (excepto en el almacén del oponente). Se aplican las siguientes reglas:</p>
        <ul>
            <li>Si la siembra termina en el almacén propio, el jugador vuelve a tener el turno</li>
            <li>Si la siembra termina en una casilla propia que estuviera vacía, se lleva al almacén
                propio la última semilla y las que hubiera en la casilla opuesta del otro jugador</li>
            <li>El juego termina en el momento en que cualquiera de los dos jugadores tenga todas sus
                casillas vacías. Si el contrario dispone de semillas, éstas pasarán al almacén del propietario
                de las casillas</li>
        </ul>
        <p>Gana el jugador que consiga en su almacén el mayor número de semillas</p>
    </string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>
    <string name="prefTituloCategoria3">Más información…</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>
    <string name="txtDialogoReinicioPregunta">¿Desea reniniciar el juego?</string>
    <string name="txtDialogoReinicioTitulo">Reiniciar juego</string>
    <string name="txtDialogoReinicioAfirmativo">Reiniciar</string>
    <string name="txtDialogoReinicioNegativo">Cancelar</string>
    <string name="txtPartidaGuardada">¡Partida guardada!</string>
    <string name="txtPartidaRecuperada">¡Se ha recuperado la partida!</string>
    <string name="txtDialogoSobreescribirTitulo">Recuperar partida</string>
    <string name="txtDialogoSobreescribirPregunta">Se va a sobreescribir la partida actual. ¿Desea continuar?</string>
    <string name="txtDialogoSobreescribirAfirmativo">Sobreescribir</string>
    <string name="txtDialogoSobreescribirNegativo">Cancelar</string>
    <string name="txtUserPreferences">Preferencias de Usuario</string>
    <string name="txtUsername">Nombre de Usuario</string>
    <string name="keyUsername">username</string>
    <string name="usernameDefault">Jugador 1</string>
    <string name="pref_user">pref_userPreferences</string>
    <string name="txtScoreboard">Mejores Resultados</string>
    <string name="txtPlayerScore">Puntuación Usuario:</string>
    <string name="txtComputerScore">Puntuación Ordenador:</string>
    <string name="txtEliminarPuntuaciones">Eliminar Puntuaciones</string>
    <string name="txtPuntuacionesEliminadas">Se han eliminado las puntuaciones</string>
    <string name="txtDialogoEliminarPuntuacionesTitulo">Eliminar Puntuaciones</string>
    <string name="txtDialogoEliminarPuntuacionesPregunta">¿Desea eliminar todas las puntuaciones?</string>
    <string name="txtDialogoEliminarPuntuacionesNegativo">Cancelar</string>
    <string name="txtDialogoEliminarPuntuacionesAfirmativo">Eliminar</string>
    <string name="pref_game">pref_gamePreferences</string>
    <string name="txtGamePreferences">Preferencias del Juego</string>
    <string name="keySeedNumber">seedNumber</string>
    <string name="txtSeedNumber">Número de Semillas</string>
    <string name="keyFirstPlayer">firstPlayer</string>
    <string name="txtFirstPlayer">Jugador Inicial</string>
    <string name="txtRestartRequired">Se deberá reiniciar el juego para aplicar los cambios</string>
    <string name="txtTimerSeparator">:</string>
    <string name="txtTimerDefault">00:00</string>
    <string name="txtDurationScore">Duración:</string>

</resources>