<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="@string/pref_user"
        android:title="@string/txtUserPreferences">
        <EditTextPreference
            android:key="@string/keyUsername"
            android:title="@string/txtUsername"
            android:defaultValue="@string/usernameDefault"
            app:useSimpleSummaryProvider="true"
            app:singleLine="true">
        </EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_game"
        android:title="@string/txtGamePreferences">
        <EditTextPreference
            android:key="@string/keySeedNumber"
            android:title="@string/txtSeedNumber"
            android:inputType="number"
            android:defaultValue="@integer/intNumInicialSemillas"
            app:useSimpleSummaryProvider="true"
            app:singleLine="true">
        </EditTextPreference>
    </PreferenceCategory>
</PreferenceScreen>